--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,25 +1,13 @@
 ---
 type: page
-title: About
+title: Home
 date: 2021-03-19
 ---
 
-# Your Name
+import AnalogClock from "../components/AnalogClock";
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+# 홈
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+<AnalogClock size={400} />
 
-[**Deploy your own**](https://vercel.com/new/clone?repository-url=https://github.com/vercel/next.js/tree/canary/examples/blog&project-name=portfolio&repository-name=portfolio) in a few minutes.
-
----
-
-<div>
-  Twitter [@yourname](https://twitter.com/yourname)
-  <br />
-  GitHub [@yourname](https://github.com/yourname)
-  <br />
-  Instagram [@yourname](https://instagram.com/yourname)
-  <br />
-  Email your@name.com
-</div>
+안녕하세요! HURRAEY 블로그에 오신 것을 환영합니다.
