Add retro-themed components and styles: introduce FloatingHearts, PixelBackground, PixelGrid, RetroHome, RetroImage, and RetroWindow components; update package.json with framer-motion and lucide-react dependencies; create retro.css for styling; modify index.mdx to use RetroHome.

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,10 +4,6 @@ title: Home
 date: 2021-03-19
 ---
 
-import AnalogClock from "../components/AnalogClock";
+import { RetroHome } from "../components/RetroHome";
 
-# 홈
-
-<AnalogClock size={400} />
-
-안녕하세요! HURRAEY 블로그에 오신 것을 환영합니다.
+<RetroHome />
