Add page configuration support: introduce README_PAGE_CONFIG.md for JSON structure guidelines, implement RetroPageWithConfig for dynamic page loading, and refactor Retro components to utilize configuration for content rendering. Remove legacy RetroHome component for cleaner architecture.

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,6 +4,6 @@ title: Home
 date: 2021-03-19
 ---
 
-import { RetroHome } from "../components/RetroHome";
+import { RetroHome } from "../components/Home/RetroHome";
 
 <RetroHome />
